--- a/AugmentedReality/res/values/strings.xml
+++ b/AugmentedReality/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">AugmentedReality</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="sobel">Sobel Edge</string>
 
 </resources>
